# Naloga4

./: CMakeLists.txt  Concert.cpp  Concert.h  Date.cpp  Date.h  Event.cpp  Event.h  EventAgeGroup.cpp  EventAgeGroup.h  EventOrganizer.cpp  EventOrganizer.h  Location.h  main.cpp
